--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
     <div class="container">
           <h1>What Course should I take?</h1>
           <form id="quiz">
-            <div class="form-group">
-              <label for="name">Please Enter your Name:</label>
-              <input id="name" class="form-control" type="text">
-            </div>
+
+
             <ol>
+              <li><div class="form-group">
+                <label for="name">Please Enter your Name:</label>
+                <input id="name" class="form-control" type="text">
+              </div></li>
+
+              <li><div class="form-group">
+                <label for="color">Please pick your favorite color.</label>
+                <input id="color" class="form-control" type="color">
+              </div></li>
+
               <li>What do you want to build?</li>
               <div class="radio">
                 <label>
@@ -42,8 +50,7 @@
                   Interactive Web Applications
                 </label>
               </div>
-              <li>What kind of environment do you want to work in?</li>
-              
+
               <li>What size company do you want to work in?</li>
               <div class="radio">
                 <label>
@@ -57,6 +64,7 @@
                   Large
                 </label>
               </div>
+
               <li>What kind of Development would you rather work with?</li>
               <div class="radio">
                 <label>
@@ -70,6 +78,7 @@
                   Back-end
                 </label>
               </div>
+
               <li>Are you ready to Decide?</li>
               <div class="radio">
                 <label>
