add images to image folder

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </div>
             </ol>
 
-            <button type="submit" class="btn">Go!</button>
+            <button type="submit" class="btn">Click to find out now!</button>
           </form>
           <div id="output">
 
