work on js scripts

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
             <ol>
               <li><div class="form-group">
-                <label for="name">Please Enter your Name:</label>
-                <input id="name" class="form-control" type="text">
+                <label for="your-name">Please Enter your Name:</label>
+                <input id="your-name" class="form-control" type="text">
               </div></li>
 
               <li><div class="form-group">
