work more on js scripts trying to get them to work

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <button type="submit" class="btn">Click to find out now!</button>
           </form>
           <div id="output">
-
+            <p>Based on your answers, you should study: <br> <span id="language"></span></p>
           </div>
         </div>
 
