work more on js scripts quiz is starting to work

--- a/index.html
+++ b/index.html
@@ -25,29 +25,31 @@
                 <input id="color" class="form-control" type="color">
               </div></li>
 
-              <li>What do you want to build?</li>
+              <li>Would you rather build database or web applications?</li>
               <div class="radio">
                 <label>
-                  <input type="radio" name="build" value="internal" checked>
-                  Internal Software
+                  <input type="radio" name="build" value="database" checked>
+                  Database
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" name="build" value="apps" checked>
-                  High-performance Applications
+                  <input type="radio" name="build" value="web" checked>
+                  Web
+                </label>
+              </div>
+
+              <li>Do you want to work on older or new scripts?</li>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="scripts" value="older" checked>
+                  Older
                 </label>
               </div>
               <div class="radio">
                 <label>
-                  <input type="radio" name="build" value="websites" checked>
-                  Websites
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                  <input type="radio" name="build" value="web-apps" checked>
-                  Interactive Web Applications
+                  <input type="radio" name="scripts" value="newer" checked>
+                  Newer
                 </label>
               </div>
 
