start adding show hide elements to quiz

--- a/index.html
+++ b/index.html
@@ -105,6 +105,25 @@
         <p>Based on your answers, you should study: <br> <span id="language"></span></p>
       </div>
 
+      <div class="row">
+        <div class="col-md-2">
+          <img id="csharp" src="img/csharp.png" alt="an icon of c#">
+        </div>
+        <div class="col-md-2">
+          <img id="css" src="img/css.png" alt="an icon of css">
+        </div>
+        <div class="col-md-2">
+          <img id="java" src="img/java.png" alt="an icon of java">
+        </div>
+        <div class="col-md-2">
+          <img id="php" src="img/php.png" alt="an icon of php">
+        </div>
+        <div class="col-md-2">
+          <img id="ruby" src="img/ruby.png" alt="an icon of ruby">
+        </div>
+
+      </div>
+
     </div>
 
   </body>
