work on branching so the right answer pops up

--- a/index.html
+++ b/index.html
@@ -102,24 +102,29 @@
       </form>
 
       <div id="output">
-        <p>Based on your answers, you should study: <br> <span id="language"></span></p>
+        <p>Based on your answers, you should study:</p>
       </div>
 
       <div class="row">
-        <div class="col-md-2">
-          <img id="csharp" src="img/csharp.png" alt="an icon of c#">
+        <div id="csharp" class="col-md-2">
+          <h3>C#</h3>
+          <img src="img/csharp.png" alt="an icon of c#">
         </div>
-        <div class="col-md-2">
-          <img id="css" src="img/css.png" alt="an icon of css">
+        <div id="css" class="col-md-2">
+          <h3>CSS</h3>
+          <img src="img/css.png" alt="an icon of css">
         </div>
-        <div class="col-md-2">
-          <img id="java" src="img/java.png" alt="an icon of java">
+        <div id="java" class="col-md-2">
+          <h3>Java</h3>
+          <img src="img/java.png" alt="an icon of java">
         </div>
-        <div class="col-md-2">
-          <img id="php" src="img/php.png" alt="an icon of php">
+        <div id="php" class="col-md-2">
+          <h3>PHP</h3>
+          <img src="img/php.png" alt="an icon of php">
         </div>
-        <div class="col-md-2">
-          <img id="ruby" src="img/ruby.png" alt="an icon of ruby">
+        <div id="ruby" class="col-md-2">
+          <h3>Ruby</h3>
+          <img src="img/ruby.png" alt="an icon of ruby">
         </div>
 
       </div>
