add css and bootstrap styles

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <title>Track Suggester</title>
+    <link rel="icon" type="image/png" href="img/favicomatic/favicon.ico" sizes="16x16" />
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2|VT323" rel="stylesheet">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
 
     <div class="container">
-      <h1>What Course should I take?</h1>
-
-
+      <div class="jumbotron">
+        <h1>What Course should I take?</h1>
+      </div>
 
       <div class="form-group">
         <label for="color">Select your favorite color.</label>
